syntax = "proto3";

package gateway;

option go_package = "./servers/gateway/proto;proto";

service GateAdapter {
  rpc UserMessage(UserMessageWraper) returns (SteamClosed) {}
}

message UserMessageWraper {
  string gateway = 1;
  string name = 2;
  map<string, string> meta = 3;
  bytes body = 4;
  uint64 user_id = 5;
  string serial_number = 6;
}

message EventMessageWraper {
  string topic = 1;
  bytes body = 2;
  string create_by = 3;
  string create_at = 4;
}

message SteamClosed {
  string msg = 1;
}